<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_black"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/registerTitle"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/register_title"
        android:textColor="@color/button_bg_gold"
        android:textSize="45sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginStart="30dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/nameField"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/input_field_bg"
            android:hint="@string/hint_name"
            android:inputType="textCapWords"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_field_text"
            android:textColorHint="@color/input_field_hint" />

        <EditText
            android:id="@+id/surnameField"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/input_field_bg"
            android:hint="@string/hint_surname"
            android:inputType="textCapWords"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_field_text"
            android:textColorHint="@color/input_field_hint" />

        <EditText
            android:id="@+id/emailField"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/input_field_bg"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_field_text"
            android:textColorHint="@color/input_field_hint" />

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/input_field_bg"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_field_text"
            android:textColorHint="@color/input_field_hint" />

        <EditText
            android:id="@+id/confirmPasswordField"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/input_field_bg"
            android:hint="@string/hint_confirm_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_field_text"
            android:textColorHint="@color/input_field_hint" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/areaField"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/input_field_bg"
                android:hint="@string/hint_area"
                android:inputType="textCapWords"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/input_field_text"
                android:textColorHint="@color/input_field_hint"
                android:layout_weight="1"
                android:layout_marginRight="3dp" />

            <EditText
                android:id="@+id/cityField"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/input_field_bg"
                android:hint="@string/hint_city"
                android:inputType="textCapWords"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/input_field_text"
                android:textColorHint="@color/input_field_hint"
                android:layout_weight="1"
                android:layout_marginLeft="3dp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start">

            <EditText
                android:id="@+id/dateOfBirthField"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/input_field_bg"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/hint_birthdate"
                android:inputType="date"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/input_field_text"
                android:textColorHint="@color/input_field_hint" />

            <Button
                android:id="@+id/datePickerButton"
                android:layout_width="200dp"
                android:layout_height="fill_parent"
                android:layout_alignParentRight="true"
                android:layout_weight="1"
                android:background="@color/button_bg_gray"
                android:onClick="onDatePickerClick"
                android:text="@string/button_date_picker"
                android:textColor="@color/button_text_white"
                android:textSize="13dp" />
        </LinearLayout>

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/genderRadioGroup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/genderText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingEnd="10dp"
                android:paddingRight="10dp"
                android:text="@string/gender_text"
                android:textColor="@color/button_text_white"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/maleRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/button_bg_gold"
                android:checked="true"
                android:paddingEnd="10dp"
                android:paddingRight="10dp"
                android:text="@string/radio_button_male"
                android:textColor="@color/button_text_white"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/femaleRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/button_bg_gold"
                android:checked="false"
                android:text="@string/radio_button_female"
                android:textColor="@color/button_text_white"
                android:textSize="15sp" />
        </RadioGroup>

        <Button
            android:id="@+id/confirmAccountButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/button_bg_gold"
            android:onClick="onRegisterClick"
            android:text="@string/button_confirm_register"
            android:textColor="@color/button_text_white"
            android:textSize="@dimen/button_text_size"
            android:layout_marginBottom="10dp" />

    </LinearLayout>

</LinearLayout>
